--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:fullBackupContent="">
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +20,10 @@
         <activity android:name=".Slider" >
         </activity>
 
-        <activity android:name=".Batch_is_gone_window" >
+        <activity android:name=".Batch_is_gone_window_001" >
+        </activity>
+
+        <activity android:name=".Batch_is_gone_window_002" >
         </activity>
 
     </application>
